--- a/liwords-ui/src/gameroom/board_panel.css
+++ b/liwords-ui/src/gameroom/board_panel.css
@@ -25,6 +25,7 @@
 }
 .board-spaces, .tiles {
   width: 100%;
+  min-width: 360px;
   display: grid;
   grid-template-columns: repeat(15, 1fr);
   grid-template-rows: repeat(15, 1fr);
@@ -46,6 +47,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #2D6A9E;
 }
 
 .board-space::before {
@@ -53,6 +55,10 @@
   padding-bottom: 100%;
   display: inline-block;
   vertical-align: top;
+}
+
+.board-space .anticon {
+  position: absolute;
 }
 
 .board-space .logo {
@@ -109,6 +115,10 @@
   height: 3vw;
 }
 
+.ant-modal .rack {
+  height: auto;
+}
+
 .rack-container {
   display: flex;
   justify-content: center;
@@ -122,6 +132,7 @@
   align-items: center;
   border-radius: 10%;
   line-height: 0;
+  text-align: center;
 }
 
 .empty-space {
